--- a/EnvironmentData/EnvironmentData.csproj
+++ b/EnvironmentData/EnvironmentData.csproj
@@ -68,7 +68,7 @@
     <Compile Include="PostSharp\CachingAttribute.cs" />
     <Compile Include="PostSharp\LogExceptionAttribute.cs" />
     <Compile Include="PostSharp\PostsharpExceptionHandler.cs" />
-    <Compile Include="Program.cs" />    
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -82,6 +82,7 @@
     <Compile Include="Utility\CommonHelper.cs" />
     <Compile Include="Utility\Constants.cs" />
     <Compile Include="Interfaces\IApiCallingUtil.cs" />
+    <Compile Include="Utility\LoggingHelper.cs" />
     <Compile Include="Utility\PrintHelper.cs" />
     <Compile Include="Utility\WebClientWithTimeout.cs">
       <SubType>Component</SubType>
